Added discrepancy of random seq. for n=1,10,100,...